cmake_minimum_required(VERSION 3.20)
project(LoadConfigFromLuaScripts)
add_executable(${PROJECT_NAME} LoadConfigFromLuaScripts.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/lua/src)
target_link_libraries(${PROJECT_NAME} lualib)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
